# protei

./: .gitignore  CMakeLists.txt  README.md  algo.h  main.cpp
client/: CMakeLists.txt  client.cpp  client.h
server/: CMakeLists.txt  server.cpp  server.h
server/algorithm/: algo.h
tests/: CMakeLists.txt  get_nums_from_str.cpp  is_number.cpp  vector_sum.cpp
